--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>Archetype - http-server</name>
   <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.13</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.2</version>
+    </dependency>
+  </dependencies>
   <build>
     <plugins>
       <plugin>
